--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 *.cfg
 *.tmp
 
+# TS compiled
+*.js
+!courier_fix.js
+!multiteam_end_screen_butt.js
+!team_select_butt.js
+!util.js
+
+# Valve compiled
+*.vpk
 *.vpcf_c
 *.vtex_c
 *.vsndevts_c
