--- a/content/panorama/scripts/custom_game/tsconfig.json
+++ b/content/panorama/scripts/custom_game/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2021",
         "lib": ["es2021"],
-        "types": ["@moddota/panorama-types"],
+        "types": ["panorama-types"],
         "strict": true,
     },
     "compileOnSave": true,
