--- a/content/panorama/scripts/custom_game/tsconfig.json
+++ b/content/panorama/scripts/custom_game/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "target": "es2021",
-        "lib": ["es2021"],
+        "target": "es2017",
+        "lib": ["es2017"],
         "types": ["panorama-types"],
-        "strict": true,
+        "strict": true
     },
-    "compileOnSave": true,
+    "compileOnSave": true
 }
